# Events

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Demo/: AdvancedCommands.cpp  CommandDemo.cpp  EventHandlerDemo.cpp  ObjectDemo.cpp
Include/: EventArgs.h  EventCommand.h  EventHandler.h  FunctionCommand.h  Object.h  StaticCommand.h
